--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "dotenv": "^17.2.3",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "prisma": "^7.0.1",
     "typescript": "~5.9.2"
   },
   "private": true
