--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.9",
     "expo-linking": "~8.0.8",
+    "expo-print": "~15.0.8",
     "expo-router": "~6.0.11",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
@@ -40,6 +41,8 @@
     "react-native": "0.81.4",
     "react-native-calendars": "github:craftworkco/react-native-calendars#feat/test-updates-from-upstream",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-pdf": "^7.0.3",
+    "react-native-pdf-lib": "^1.0.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
